{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 220,
  "lineage": "04e67dc1-ae1e-7df0-0fcb-481f7847d7f3",
  "resources": [
    {
      "module": "module.entry_tracker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db56f446d44f2f09",
            "arn": "arn:aws:ec2:ap-south-1:889867978066:instance/i-0155b4f9e90ce0f12",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-0155b4f9e90ce0f12",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c848832810faa73e",
            "private_dns": "ip-10-0-1-231.ap-south-1.compute.internal",
            "private_ip": "10.0.1.231",
            "public_ip": "13.232.22.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008ef62d2d06f621f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040fa6d98446296f0",
            "tags": {
              "Environment": "staging",
              "Name": "food_tracker_ec2_instance_xxxx",
              "Project": "entry-tracker"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "food_tracker_ec2_instance_xxxx",
              "Project": "entry-tracker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03aea12215c4f33e1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.entry_tracker.aws_iam_instance_profile.ec2_profile",
            "module.entry_tracker.aws_iam_role.ec2_role",
            "module.entry_tracker.aws_security_group.instance_sg",
            "module.entry_tracker.aws_subnet.public_subnet",
            "module.entry_tracker.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.entry_tracker",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:889867978066:internet-gateway/igw-09b4ffd1b3effb016",
            "id": "igw-09b4ffd1b3effb016",
            "owner_id": "889867978066",
            "tags": {
              "Name": "entryTracker-igw"
            },
            "tags_all": {
              "Name": "entryTracker-igw"
            },
            "vpc_id": "vpc-0710b382b62b5fdf5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.entry_tracker.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.entry_tracker",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:889867978066:route-table/rtb-07038de6575662c64",
            "id": "rtb-07038de6575662c64",
            "owner_id": "889867978066",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b4ffd1b3effb016",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0710b382b62b5fdf5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.entry_tracker.aws_internet_gateway.igw",
            "module.entry_tracker.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.entry_tracker",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0740f5576d6920dc2",
            "route_table_id": "rtb-07038de6575662c64",
            "subnet_id": "subnet-040fa6d98446296f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.entry_tracker.aws_internet_gateway.igw",
            "module.entry_tracker.aws_route_table.public_rt",
            "module.entry_tracker.aws_subnet.public_subnet",
            "module.entry_tracker.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.entry_tracker",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:889867978066:security-group/sg-03aea12215c4f33e1",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03aea12215c4f33e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-sg",
            "name_prefix": "",
            "owner_id": "889867978066",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0710b382b62b5fdf5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.entry_tracker.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.entry_tracker",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:889867978066:subnet/subnet-040fa6d98446296f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040fa6d98446296f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889867978066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0710b382b62b5fdf5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.entry_tracker.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.entry_tracker",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:889867978066:vpc/vpc-0710b382b62b5fdf5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c73f70abdd381334",
            "default_route_table_id": "rtb-00187f9183ea37559",
            "default_security_group_id": "sg-091012a664da4c539",
            "dhcp_options_id": "dopt-07095dbaedfccafcb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0710b382b62b5fdf5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00187f9183ea37559",
            "owner_id": "889867978066",
            "tags": {
              "Name": "entryTracker-vpc"
            },
            "tags_all": {
              "Name": "entryTracker-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}